Fixed column controls not displaying properly on small screens

--- a/src/app/components/records-table/records-table.component.scss
+++ b/src/app/components/records-table/records-table.component.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   mat-checkbox {
     margin: 1em;
   }
